--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         PGPORT_TEST: 5432
         PGHOST: localhost
         PGUSER: root
-        PGDATABASE: forumapi
+        PGDATABASE: forumapi_test
         PGPASSWORD: secret
         PGPORT: 5432
         ACCESS_TOKEN_KEY: 8b7b4ef375716ab08b2a3951b29d52fc00b1c855f9d1a847229b8c5935bef56d9d271e76a9cf08e614300395c3b90ebe559cf968a0741b18c9505549394b2c70
