--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,8 +18,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ~/project
-            git pull origin master
+            cd ~/dicoding-expert-project-1
+            git pull origin main
             npm install
             npm run migrate up
             pm2 restart project
