--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ~/dicoding-expert-project-1
-            git pull origin main
+            git pull origin master
             npm install
             npm run migrate up
             pm2 restart forum-api
